syntax = "proto3";

package api;

message SSHKey {
  string name = 1;
  string algo = 2;
  string pubkey = 3;
  string comment = 4;
}

message GetKeysRequest {
  string vm_name = 1;
}

message GetKeysReply {
  repeated SSHKey keys = 1;
}

service PubkeyStore {
  rpc GetKeys(GetKeysRequest) returns (GetKeysReply) {}
}
